...
    func getPopularMovies(count: Int) -> AnyPublisher<IMDBSearchResponse, Error>
    func getMovie(id: String) -> AnyPublisher<MovieResponse, Error>
}


class MovieAPIService: MovieAPIServiceProtocol {
    private let baseURL = "https://imdb236.p.rapidapi.com/imdb/search"
   // private let apiKey = "b2169401aamshc8679aa36ea5b41p1ddc2djsna2ec088ab22f"
    private let apiKey = "4b5ee328abmshd9faad02770c3d4p1d6c85jsn89dca66a7d45"
    private let apiHost = "imdb236.p.rapidapi.com"
    
    private let decoder: JSONDecoder
    
...
